# plover_run_shell

./: README.md  plover_run_shell.py  setup.cfg
