[metadata]
name = plover_run_shell
version = 0.0.0
author = user202729
description = Command plugin for Plover to run an arbitrary shell command
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/user202729/plover_run_shell
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = plover plover_plugin

[options]
zip_safe = True
py_modules =
    plover_run_shell

[options.entry_points]
plover.command =
    shell = plover_run_shell:shell_cmd
