[metadata]
name = plover_run_shell
version = 0.0.2
author = user202729
description = Command plugin for Plover to run an arbitrary shell command
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover_run_shell
classifiers =
    Environment :: Plugins
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
py_modules =
    plover_run_shell

[options.entry_points]
plover.command =
    shell = plover_run_shell:shell_cmd
